force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/RulePath__c.object-meta.xml
<CustomObject>
    <label>RulePath</label>
    <nameField>
        <label>RulePath Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RulePaths</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>