force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/fields/ApprovalEndDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovalEndDate__c</fullName>
    <label>Data do Fim do Processo de Aprovacao</label>
    <type>DateTime</type>
</CustomField>