force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/fields/ApprovalInterval__c.field-meta.xml
<CustomField>
    <fullName>ApprovalInterval__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Data do Fim do Processo de Aprovacao - Data do Inicio do Processo de Aprovacao em minutos</description>
    <label>Intervo de Tempo do Processo de Aprovaca</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>