force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/fields/ApprovalStartDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStartDate__c</fullName>
    <label>Data do Inicio do Processo de Aprovacao</label>
    <type>DateTime</type>
</CustomField>