force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/fields/BusinessRulesPath__c.field-meta.xml
<CustomField>
    <fullName>BusinessRulesPath__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>BusinessRulesPath</label>
    <referenceTo>BusinessRulesPath__c</referenceTo>
    <relationshipLabel>RulePaths</relationshipLabel>
    <relationshipName>RulePaths</relationshipName>
    <type>Lookup</type>
</CustomField>