force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <formula>BusinessRulesPath__r.BusinessRulesValidation__r.ClassName__c</formula>
    <label>ClassName</label>
    <type>Text</type>
</CustomField>