force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/fields/DataUsed__c.field-meta.xml
<CustomField>
    <fullName>DataUsed__c</fullName>
    <description>Campo para o armazenamento dos dados que foram utilizados para a execuçao da regra, sendo uma &quot;foto&quot; das informaçoes utilizadas no momento que a regra foi realizada.</description>
    <inlineHelpText>Campo para o armazenamento dos dados que foram utilizados para a execuçao da regra, sendo uma &quot;foto&quot; das informaçoes utilizadas no momento que a regra foi realizada.</inlineHelpText>
    <label>Dados Utilizados</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>