force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/fields/ErrorEndDate__c.field-meta.xml
<CustomField>
    <fullName>ErrorEndDate__c</fullName>
    <label>Data do Fim Erro</label>
    <type>DateTime</type>
</CustomField>