force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/fields/ErrorInterval__c.field-meta.xml
<CustomField>
    <fullName>ErrorInterval__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Data do Inicio Erro - Data do Fim Erro, em minutos</description>
    <label>Intervalo de Tempo do Erro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>