force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>Mensagem de erro</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>