force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/fields/ErrorStartDate__c.field-meta.xml
<CustomField>
    <fullName>ErrorStartDate__c</fullName>
    <label>Data do Inicio Erro</label>
    <type>DateTime</type>
</CustomField>