force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/fields/ExecuteSubRule__c.field-meta.xml
<CustomField>
    <fullName>ExecuteSubRule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para identificar se a sub-regra deve ser realizada ou não.

Caso o valor seja true, a regra será realizada.
Caso o valor seja false, a regra deverá ser ignorada (sendo atualizada automaticamente para &quot;regra atendida&quot;).</description>
    <inlineHelpText>Campo para identificar se a sub-regra deve ser realizada ou não.

Caso o valor seja true, a regra será realizada.
Caso o valor seja false, a regra deverá ser ignorada (sendo atualizada automaticamente para &quot;regra atendida&quot;).</inlineHelpText>
    <label>Executar Sub-Regra</label>
    <type>Checkbox</type>
</CustomField>