force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/fields/executionTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>executionTimeStamp__c</fullName>
    <formula>Interval__c - (  WaitingIntegrationReturnInterval__c -  ErrorInterval__c -  IntegrationErrorInterval__c -  PaymentInterval__c -  ApprovalInterval__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intervalo de Tempo de Execuçao</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>