force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/fields/IntegrationErrorEndDate__c.field-meta.xml
<CustomField>
    <fullName>IntegrationErrorEndDate__c</fullName>
    <label>Data do Fim do Erro de Integracao</label>
    <type>DateTime</type>
</CustomField>