force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/fields/IntegrationErrorInterval__c.field-meta.xml
<CustomField>
    <fullName>IntegrationErrorInterval__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Data do Fim do Erro de Integracao - Data do Inicio do Erro de Integracao em minutos</description>
    <label>Intervalo de Tempo do Erro de Integracao</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>