force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/fields/IntegrationErrorStartDate__c.field-meta.xml
<CustomField>
    <fullName>IntegrationErrorStartDate__c</fullName>
    <label>Data do Inicio do Erro de Integracao</label>
    <type>DateTime</type>
</CustomField>