force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/fields/Interval__c.field-meta.xml
<CustomField>
    <fullName>Interval__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Data do Fim - Data do Inicio em minutos</description>
    <inlineHelpText>Data do Fim - Data do Inicio em minutos</inlineHelpText>
    <label>Intervalo de Tempo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>