force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/fields/IntervalErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>IntervalErrorMessage__c</fullName>
    <description>Campo para o preenchimento da mensagem de erro caso aconteça algum erro no cálculo de intervalo.</description>
    <inlineHelpText>Campo para o preenchimento da mensagem de erro caso aconteça algum erro no cálculo de intervalo.</inlineHelpText>
    <label>Mensagem de Erro do Calculo do Intervalo</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>