force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/fields/isActivated__c.field-meta.xml
<CustomField>
    <fullName>isActivated__c</fullName>
    <formula>BusinessRulesPath__r.isActivated__c</formula>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>