force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/fields/isDisabled__c.field-meta.xml
<CustomField>
    <fullName>isDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo identificador para saber se o conjunto de regras ainda esta em processo de análise, caso esteja marcada com o valor &quot;false&quot;, o conjunto de regras ainda esta em andamento, caso esteja com o valor &quot;true&quot;, o conjunto de regras que essa regra pertence foi cancelado ou alguma regra nao foi atendida.</description>
    <inlineHelpText>Campo identificador para saber se o conjunto de regras ainda esta em processo de análise, caso esteja marcada com o valor &quot;false&quot;, o conjunto de regras ainda esta em andamento, caso esteja com o valor &quot;true&quot;, o conjunto de regras que essa regra pertence foi cancelado ou alguma regra nao foi atendida.</inlineHelpText>
    <label>Está Desativado</label>
    <type>Checkbox</type>
</CustomField>