force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/fields/PaymentEndDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentEndDate__c</fullName>
    <label>Data do Fim do Pagamento</label>
    <type>DateTime</type>
</CustomField>