force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/fields/PaymentInterval__c.field-meta.xml
<CustomField>
    <fullName>PaymentInterval__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Data do Inicio do Pagamento - Data do Fim do Pagamento, em minutos</description>
    <label>Intervalo de Tempo do Pagamento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>