force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/fields/PaymentStartDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentStartDate__c</fullName>
    <label>Data do Inicio do Pagamento</label>
    <type>DateTime</type>
</CustomField>