force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <formula>BusinessRulesPath__r.Sequence__c</formula>
    <label>Sequência</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>