force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/fields/SequenceKey__c.field-meta.xml
<CustomField>
    <fullName>SequenceKey__c</fullName>
    <description>Chave da sequencia, composta pelo Id do SObject e numero da sequencia</description>
    <formula>SObjectId__c + &apos;-&apos; + TEXT( Sequence__c )</formula>
    <inlineHelpText>Chave da sequencia, composta pelo Id da SObject e numero da sequencia</inlineHelpText>
    <label>SequenceKey</label>
    <type>Text</type>
</CustomField>