force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/fields/SObjectId__c.field-meta.xml
<CustomField>
    <fullName>SObjectId__c</fullName>
    <label>SObjectId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>