force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em Análise</fullName>
            </value>
            <value>
                <fullName>Em Processamento</fullName>
            </value>
            <value>
                <fullName>Regra Atendida</fullName>
            </value>
            <value>
                <fullName>Regra nao Atendida</fullName>
            </value>
            <value>
                <fullName>Aguardando Pagamento</fullName>
            </value>
            <value>
                <fullName>Em Aprovacao</fullName>
                <label>Em Aprovação</label>
            </value>
            <value>
                <fullName>Faturamento Parcial Realizado</fullName>
            </value>
            <value>
                <fullName>Erro Integracao</fullName>
                <label>Erro Integração</label>
            </value>
            <value>
                <fullName>Aguardando Retorno da Integracao</fullName>
                <label>Aguardando Retorno da Integração</label>
            </value>
            <value>
                <fullName>Erro ao Executar Regra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>