force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/fields/WaitingIntegrationReturnEndDate__c.field-meta.xml
<CustomField>
    <fullName>WaitingIntegrationReturnEndDate__c</fullName>
    <label>Data do Fim Aguardando Integracao</label>
    <type>DateTime</type>
</CustomField>