force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/fields/WaitingIntegrationReturnInterval__c.field-meta.xml
<CustomField>
    <fullName>WaitingIntegrationReturnInterval__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Data do Inicio Aguardando Integracao - Data do Fim Aguardando Integracao, em minutos</description>
    <label>Intervalo de Tempo Aguardando Integracao</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>