force-app/main/FrameWork/MadeByMe/BusinessRules/Metadatas/objects/RulePath__c/fields/WaitingIntegrationReturnStartDate__c.field-meta.xml
<CustomField>
    <fullName>WaitingIntegrationReturnStartDate__c</fullName>
    <label>Data do Inicio Aguardando Integracao</label>
    <type>DateTime</type>
</CustomField>